[package]
name = "summation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sdk-s3 = "0.31.1"
aws-config = "0.56.1"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = {version = "1.0.188",  features = ["derive"] }
